[fix] improving auxiliary library ease of addition

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -121,7 +121,8 @@
         "*.hpp11": "cpp",
         "cfenv": "cpp",
         "scoped_allocator": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "__std_stream": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
