--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,145 @@ flutter:
     - assets/lib/src/prefab/
     - assets/lib/src/prefab/defaults/
     - assets/lib/src/vendor/
+    - assets/lib/src/vendor/igl/
+    - assets/lib/src/vendor/igl/cmake/
+    - assets/lib/src/vendor/igl/shell/
+    - assets/lib/src/vendor/igl/shell/openxr/mobile/
+    - assets/lib/src/vendor/igl/shell/openxr/mobile/impl/
+    - assets/lib/src/vendor/igl/shell/openxr/mobile/java/com/facebook/igl/shell/openxr/gles/
+    - assets/lib/src/vendor/igl/shell/openxr/mobile/java/com/facebook/igl/shell/openxr/vulkan/
+    - assets/lib/src/vendor/igl/shell/openxr/mobile/vulkan/
+    - assets/lib/src/vendor/igl/shell/openxr/mobile/opengl/
+    - assets/lib/src/vendor/igl/shell/resources/images/
+    - assets/lib/src/vendor/igl/shell/resources/models/
+    - assets/lib/src/vendor/igl/shell/resources/mac/
+    - assets/lib/src/vendor/igl/shell/resources/mac/Assets.xcassets/
+    - assets/lib/src/vendor/igl/shell/resources/mac/Assets.xcassets/AppIcon.appiconset/
+    - assets/lib/src/vendor/igl/shell/resources/mac/Base.lproj/
+    - assets/lib/src/vendor/igl/shell/resources/shaders/
+    - assets/lib/src/vendor/igl/shell/shared/extension/
+    - assets/lib/src/vendor/igl/shell/shared/input/
+    - assets/lib/src/vendor/igl/shell/shared/platform/
+    - assets/lib/src/vendor/igl/shell/shared/platform/win/
+    - assets/lib/src/vendor/igl/shell/shared/platform/ios/
+    - assets/lib/src/vendor/igl/shell/shared/platform/mac/
+    - assets/lib/src/vendor/igl/shell/shared/platform/android/
+    - assets/lib/src/vendor/igl/shell/shared/fileLoader/
+    - assets/lib/src/vendor/igl/shell/shared/fileLoader/win/
+    - assets/lib/src/vendor/igl/shell/shared/fileLoader/ios/
+    - assets/lib/src/vendor/igl/shell/shared/fileLoader/mac/
+    - assets/lib/src/vendor/igl/shell/shared/fileLoader/android/
+    - assets/lib/src/vendor/igl/shell/shared/renderSession/
+    - assets/lib/src/vendor/igl/shell/shared/imageWriter/
+    - assets/lib/src/vendor/igl/shell/shared/imageWriter/win/
+    - assets/lib/src/vendor/igl/shell/shared/imageWriter/ios/
+    - assets/lib/src/vendor/igl/shell/shared/imageWriter/stb/
+    - assets/lib/src/vendor/igl/shell/shared/imageWriter/mac/
+    - assets/lib/src/vendor/igl/shell/shared/imageWriter/android/
+    - assets/lib/src/vendor/igl/shell/shared/imageLoader/
+    - assets/lib/src/vendor/igl/shell/shared/imageLoader/win/
+    - assets/lib/src/vendor/igl/shell/shared/imageLoader/ios/
+    - assets/lib/src/vendor/igl/shell/shared/imageLoader/mac/
+    - assets/lib/src/vendor/igl/shell/shared/imageLoader/android/
+    - assets/lib/src/vendor/igl/shell/shared/testShell/
+    - assets/lib/src/vendor/igl/shell/shared/netservice/
+    - assets/lib/src/vendor/igl/shell/shared/netservice/apple/
+    - assets/lib/src/vendor/igl/shell/shared/netservice/zeromq/
+    - assets/lib/src/vendor/igl/shell/ios/
+    - assets/lib/src/vendor/igl/shell/mac/
+    - assets/lib/src/vendor/igl/shell/android/
+    - assets/lib/src/vendor/igl/shell/android/java/com/facebook/igl/sample/
+    - assets/lib/src/vendor/igl/shell/android/jni/
+    - assets/lib/src/vendor/igl/shell/windows/
+    - assets/lib/src/vendor/igl/shell/windows/vulkan/
+    - assets/lib/src/vendor/igl/shell/windows/opengles/
+    - assets/lib/src/vendor/igl/shell/windows/opengl/
+    - assets/lib/src/vendor/igl/shell/renderSessions/
+    - assets/lib/src/vendor/igl/shell/apps/
+    - assets/lib/src/vendor/igl/shell/renderSessionTests/
+    - assets/lib/src/vendor/igl/docs/
+    - assets/lib/src/vendor/igl/docs/source/
+    - assets/lib/src/vendor/igl/docs/source/video/
+    - assets/lib/src/vendor/igl/docs/source/images/
+    - assets/lib/src/vendor/igl/docs/source/images/favicon/
+    - assets/lib/src/vendor/igl/docs/source/_extensions/
+    - assets/lib/src/vendor/igl/docs/source/getting-started/
+    - assets/lib/src/vendor/igl/docs/source/theme/
+    - assets/lib/src/vendor/igl/docs/source/data/
+    - assets/lib/src/vendor/igl/samples/wasm/
+    - assets/lib/src/vendor/igl/samples/desktop/
+    - assets/lib/src/vendor/igl/samples/desktop/Tiny/
+    - assets/lib/src/vendor/igl/samples/ios/snapshot_test_support/
+    - assets/lib/src/vendor/igl/samples/android/vulkan/java/com/facebook/igl/sample/
+    - assets/lib/src/vendor/igl/samples/android/vulkan/jni/
+    - assets/lib/src/vendor/igl/samples/android/opengl/java/com/facebook/igl/sample/
+    - assets/lib/src/vendor/igl/samples/android/opengl/jni/
+    - assets/lib/src/vendor/igl/.github/workflows/
+    - assets/lib/src/vendor/igl/third-party/
+    - assets/lib/src/vendor/igl/third-party/deps/patches/
+    - assets/lib/src/vendor/igl/third-party/deps/patches/stb_impl/
+    - assets/lib/src/vendor/igl/build/
+    - assets/lib/src/vendor/igl/build/android/
+    - assets/lib/src/vendor/igl/build/android/app/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/mipmap-mdpi/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/drawable-v24/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/mipmap-hdpi/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/drawable/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/mipmap-xxxhdpi/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/layout/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/mipmap-xxhdpi/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/values-night/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/values/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/xml/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/mipmap-xhdpi/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/res/mipmap-anydpi-v26/
+    - assets/lib/src/vendor/igl/build/android/app/src/main/java/com/facebook/igl/sample/
+    - assets/lib/src/vendor/igl/build/android/gradle/wrapper/
+    - assets/lib/src/vendor/igl/IGLU/
+    - assets/lib/src/vendor/igl/IGLU/managedUniformBuffer/
+    - assets/lib/src/vendor/igl/IGLU/uniform/
+    - assets/lib/src/vendor/igl/IGLU/imgui/
+    - assets/lib/src/vendor/igl/IGLU/texture_accessor/
+    - assets/lib/src/vendor/igl/IGLU/simple_renderer/
+    - assets/lib/src/vendor/igl/IGLU/simdtypes/
+    - assets/lib/src/vendor/igl/.git/objects/pack/
+    - assets/lib/src/vendor/igl/.git/info/
+    - assets/lib/src/vendor/igl/.git/logs/
+    - assets/lib/src/vendor/igl/.git/logs/refs/heads/
+    - assets/lib/src/vendor/igl/.git/logs/refs/remotes/origin/
+    - assets/lib/src/vendor/igl/.git/hooks/
+    - assets/lib/src/vendor/igl/.git/refs/heads/
+    - assets/lib/src/vendor/igl/.git/refs/remotes/origin/
+    - assets/lib/src/vendor/igl/src/igl/
+    - assets/lib/src/vendor/igl/src/igl/metal/
+    - assets/lib/src/vendor/igl/src/igl/metal/macos/
+    - assets/lib/src/vendor/igl/src/igl/metal/ios/
+    - assets/lib/src/vendor/igl/src/igl/win/
+    - assets/lib/src/vendor/igl/src/igl/tests/
+    - assets/lib/src/vendor/igl/src/igl/tests/util/
+    - assets/lib/src/vendor/igl/src/igl/tests/util/device/
+    - assets/lib/src/vendor/igl/src/igl/tests/util/device/metal/
+    - assets/lib/src/vendor/igl/src/igl/tests/util/device/vulkan/
+    - assets/lib/src/vendor/igl/src/igl/tests/util/device/opengl/
+    - assets/lib/src/vendor/igl/src/igl/tests/metal/
+    - assets/lib/src/vendor/igl/src/igl/tests/ogl/
+    - assets/lib/src/vendor/igl/src/igl/tests/ogl/macos/
+    - assets/lib/src/vendor/igl/src/igl/tests/ogl/ios/
+    - assets/lib/src/vendor/igl/src/igl/tests/vulkan/
+    - assets/lib/src/vendor/igl/src/igl/tests/iglu/
+    - assets/lib/src/vendor/igl/src/igl/tests/data/
+    - assets/lib/src/vendor/igl/src/igl/vulkan/
+    - assets/lib/src/vendor/igl/src/igl/vulkan/moltenvk/
+    - assets/lib/src/vendor/igl/src/igl/android/
+    - assets/lib/src/vendor/igl/src/igl/opengl/
+    - assets/lib/src/vendor/igl/src/igl/opengl/macos/
+    - assets/lib/src/vendor/igl/src/igl/opengl/empty/
+    - assets/lib/src/vendor/igl/src/igl/opengl/webgl/
+    - assets/lib/src/vendor/igl/src/igl/opengl/ios/
+    - assets/lib/src/vendor/igl/src/igl/opengl/egl/
+    - assets/lib/src/vendor/igl/src/igl/opengl/wgl/
+    - assets/lib/src/vendor/igl/src/igl/opengl/glx/
     - assets/lib/src/vendor/metal-cpp/
     - assets/lib/src/vendor/metal-cpp/metal-cpp/
     - assets/lib/src/vendor/metal-cpp/metal-cpp/Metal/
@@ -476,4 +615,6 @@ flutter:
     - assets/lib/src/vendor/glm/glm/detail/
     - assets/lib/src/vendor/glm/glm/gtc/
     - assets/lib/src/vendor/glm/glm/gtx/
+    - assets/lib/auxiliary_libraries/libmodel_loader.dylib
+    - assets/lib/auxiliary_libraries/libshader_compiler.dylib
     # __END__ASSETS__INCLUSION__
