--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flame: ^1.6.0
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding
@@ -41,18 +40,22 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   blur: ^3.1.0
   path_provider:
-  ffigen:
-  ffi:
-  native_context_menu:
-  material_design_icons_flutter:
-  file_picker:
-  url_launcher:
-  watcher:
-  flutter_styled_toast:
-  flutter_spinkit:
-  menu_bar:
-  window_manager:
-  flutter_treeview:
+  html: ^0.15.4
+  flutter_math_fork: ^0.7.2
+  photo_view: ^0.14.0
+  ffigen: ^8.0.2
+  encrypt: ^5.0.3
+  ffi: ^2.0.2
+  native_context_menu: ^0.2.2+5
+  material_design_icons_flutter: ^7.0.7296
+  file_picker: ^5.3.2
+  url_launcher: ^6.1.11
+  watcher: ^1.1.0
+  flutter_styled_toast: ^2.1.3
+  flutter_spinkit: ^5.2.0
+  menu_bar: ^0.5.3
+  window_manager: ^0.3.5
+  crypto: ^3.0.3
   
 dev_dependencies:
   flutter_test:
